--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,19 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: 0.9.2
-  flutter_lints: 1.0.4
+
+  flutter_lints: ^1.0.4
   flutter_localizations:
     sdk: flutter
-  intl: 0.17.0
-  flutter_layout_grid: 1.0.3
-  flutter_rating_bar: 4.0.0
+  intl: ^0.17.0
+  flutter_layout_grid: ^2.0.0
+  flutter_rating_bar: ^4.0.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
