--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_layout_grid: ^2.0.0
   flutter_rating_bar: ^4.0.0
   flutter_launcher_icons: ^0.9.2
+  go_router: ^3.1.0
 
 dev_dependencies:
   flutter_test:
